--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Be My Valentine?</title>
+    <title>A Special Question...</title>
     <style>
+        :root {
+            --primary-pink: #ff4d6d;
+            --soft-pink: #ffb3c1;
+            --bg-gradient: linear-gradient(135deg, #ffafbd 0%, #ffc3a0 100%);
+        }
+
         body {
             margin: 0;
             padding: 0;
@@ -12,73 +18,103 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #ffdae0; /* Romantic Pink */
-            font-family: 'Arial', sans-serif;
+            background: var(--bg-gradient);
+            font-family: 'Apple Color Emoji', 'Segoe UI Emoji', sans-serif;
             overflow: hidden;
         }
 
+        /* Animated floating hearts in background */
+        .bg-hearts {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            z-index: 1;
+        }
+
+        /* The Content Card */
         .card {
-            background: white;
-            padding: 40px;
+            background: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(10px);
+            padding: 50px 40px;
             border-radius: 30px;
-            box-shadow: 0 15px 35px rgba(255, 75, 110, 0.3);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
             text-align: center;
-            border: 5px solid #ff4b6e;
+            z-index: 10;
+            border: 2px solid white;
+            width: 350px;
+        }
+
+        .heart-icon {
+            font-size: 50px;
+            margin-bottom: 20px;
+            animation: pulse 1.5s infinite;
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.1); }
+            100% { transform: scale(1); }
         }
 
         h1 {
-            color: #ff4b6e;
-            font-size: 2.5rem;
-            margin-bottom: 30px;
+            color: var(--primary-pink);
+            font-size: 2.2rem;
+            margin-bottom: 40px;
+            font-weight: 800;
+            letter-spacing: -1px;
         }
 
-        .btn-box {
-            position: relative;
-            height: 120px;
-            width: 300px;
-            margin: 0 auto;
+        .btn-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+            min-height: 60px;
         }
 
         button {
             padding: 15px 35px;
-            font-size: 1.3rem;
+            font-size: 1.1rem;
             font-weight: bold;
             border: none;
-            border-radius: 50px;
+            border-radius: 15px;
             cursor: pointer;
-            transition: all 0.1s ease;
+            transition: transform 0.2s, background-color 0.3s;
+            width: 120px; /* Locked width */
+            height: 55px;  /* Locked height */
         }
 
         #noBtn {
-            background-color: #ff4b6e;
+            background-color: var(--primary-pink);
             color: white;
-            position: absolute;
-            left: 20px;
-            top: 30px;
-            z-index: 5;
+            box-shadow: 0 5px 15px rgba(255, 77, 109, 0.4);
         }
 
+        #noBtn:hover {
+            background-color: #ff758f;
+        }
+
+        /* The Trick Button */
         #yesBtn {
-            background-color: #4CAF50; /* Green for trickery */
-            color: white;
-            position: absolute;
-            right: 20px;
-            top: 30px;
-            z-index: 10;
+            background-color: white;
+            color: var(--primary-pink);
+            border: 2px solid var(--primary-pink);
+            position: relative; /* Starts in place */
+            z-index: 100;
         }
 
-        .decor {
-            position: absolute;
-            font-size: 2rem;
-            pointer-events: none;
-        }
     </style>
 </head>
 <body>
 
+    <div class="bg-hearts" id="hearts-container"></div>
+
     <div class="card">
-        <h1 id="main-text">Will you be my Valentine? 🌹</h1>
-        <div class="btn-box">
+        <div class="heart-icon">💝</div>
+        <h1>Will you be my Valentine?</h1>
+        <div class="btn-container">
             <button id="noBtn" onclick="goToVideo()">No</button>
             <button id="yesBtn">Yes</button>
         </div>
@@ -87,21 +123,49 @@
     <script>
         const yesBtn = document.getElementById('yesBtn');
 
-        // The "Yes" button running away logic
+        // Logic to make "Yes" run away without changing size
         yesBtn.addEventListener('mouseover', () => {
-            const padding = 50;
-            const x = Math.random() * (window.innerWidth - yesBtn.offsetWidth - padding);
-            const y = Math.random() * (window.innerHeight - yesBtn.offsetHeight - padding);
+            // Get random coordinates within the screen bounds
+            const padding = 100;
+            const maxX = window.innerWidth - yesBtn.offsetWidth - padding;
+            const maxY = window.innerHeight - yesBtn.offsetHeight - padding;
             
+            const randomX = Math.max(padding, Math.floor(Math.random() * maxX));
+            const randomY = Math.max(padding, Math.floor(Math.random() * maxY));
+            
+            // Set fixed position so it moves relative to screen, not card
             yesBtn.style.position = 'fixed';
-            yesBtn.style.left = `${x}px`;
-            yesBtn.style.top = `${y}px`;
+            yesBtn.style.left = `${randomX}px`;
+            yesBtn.style.top = `${randomY}px`;
         });
 
-        // When "No" is clicked, go to the Instagram video
         function goToVideo() {
             window.location.href = "https://www.instagram.com/p/DSmjR7wCNiJ/";
         }
+
+        // Add some floating background emoji
+        function createFloatingHeart() {
+            const container = document.getElementById('hearts-container');
+            const heart = document.createElement('div');
+            heart.innerHTML = '❤️';
+            heart.style.position = 'absolute';
+            heart.style.left = Math.random() * 100 + 'vw';
+            heart.style.top = '110vh';
+            heart.style.fontSize = (Math.random() * 20 + 10) + 'px';
+            heart.style.opacity = Math.random();
+            heart.style.transition = 'transform 5s linear';
+            container.appendChild(heart);
+
+            setTimeout(() => {
+                heart.style.transform = `translateY(-120vh) rotate(${Math.random() * 360}deg)`;
+            }, 100);
+
+            setTimeout(() => {
+                heart.remove();
+            }, 6000);
+        }
+
+        setInterval(createFloatingHeart, 300);
     </script>
 </body>
 </html>
